Try to fix overflow on mobile in footer

--- a/app/assets/stylesheets/organisms/_masthead.scss
+++ b/app/assets/stylesheets/organisms/_masthead.scss
@@ -13,6 +13,7 @@
 
   &__container {
     margin-top: $pulse*10;
+    overflow: hidden;
   }
 
   &__end {
